fix: image alignment and invert some logos

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -32,6 +32,10 @@ html.dark {
   .container-secondary {
     background-color: var(--color-midnight);
   }
+
+  .next.logo, .jekyll.logo {
+    filter: invert(1);
+  }
 }
 
 .container-secondary {
@@ -210,7 +214,7 @@ table {
   }
 
   img {
-    @apply mx-auto my-4 md:my-8 shadow rounded bg-white;
+    @apply my-4 md:my-8 shadow rounded bg-white;
   }
 }
 
